# OGE

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CmakeLists.txt  README.md  cpp.hint  main.cpp  test_cube_textured.frag
Engine/: CMakeLists.txt  EngineLogger.hpp  Logger.hpp  Math.hpp
Engine/Core/: CMakeLists.txt
Engine/Core/include/Engine/: AABB.hpp  AABBOps.hpp  DenseSparsePool.hpp  Formaters.hpp  GameApp.hpp  GameAppState.hpp  IScene.hpp  JobSystem.hpp  Logger.hpp  Math.hpp  ObjectType.hpp  Platform.hpp  Point2.hpp  Point3.hpp  PrintStackTrace.hpp  Random.hpp  Rect.hpp  ResourcePool.hpp  TickScheduler.hpp  TypeTraits.hpp  entt.hpp
Engine/Core/src/: AssetManager.cpp  GameApp.cpp  Logger.cpp  TickScheduler.cpp
Engine/Core/src/ECS/: GameNetSerializer.cpp  SubsystemCamera.cpp  SubsystemCreature.cpp  SubsystemPhysics.cpp  SubsystemPlayer.cpp
Engine/Core/src/Input/: InputSystem.cpp
Engine/Core/src/Net/: NetClient.cpp  NetServer.cpp
Engine/Core/src/Platform/: CLIRunner.cpp  Platform.cpp  PrintStackTrace.cpp
Engine/Core/src/Terrain/: BlockManager.cpp  TerrainGenerator.cpp  TerrainService.cpp  TerrainView.cpp
Engine/Graphics/: CMakeLists.txt  DenseSparsePool.hpp  GPUResourceManager.hpp  IGraphicsBackend.hpp  ResourcePool.hpp  RingStagingBuffer.cpp  TestRenderer.cpp  TestRenderer.hpp  UniformArena.cpp  UniformArena.hpp
Engine/Graphics/GraphicsBackends/: GraphicsBackends.cpp  Vulkan.cpp  Vulkan.hpp
Engine/Graphics/GraphicsBackends/Vulkan/: VulkanBindingGroups.cpp  VulkanBindingGroups.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanFence.cpp  VulkanFence.hpp  VulkanFrameBuffer.cpp  VulkanFrameBuffer.hpp  VulkanLogger.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanTexture.cpp  VulkanTexture.hpp
Engine/Graphics/include/Engine/: AssetBundle.hpp  GraphicState.hpp  StreamingManager.hpp  WindowedGameApp.hpp
Engine/Graphics/src/: AssetBundle.cpp  StreamingManager.cpp  WindowedGameApp.cpp
Engine/Graphics/src/ECS/: CameraRenderer.cpp  GameRenderer.cpp  IFont.cpp  Renderers.cpp  SubsystemCamera.cpp  SubsystemDebugInfo.cpp  SubsystemPlayerInput.cpp  SubsystemUI.cpp
Engine/Graphics/src/Graphics/: DebugPass.cpp  Renderer.cpp  RendererInternals.hpp  TerrainPass.cpp  UIPass.cpp  UniformArena.cpp
Engine/Graphics/src/Platform/: SDL3GameWindow.cpp  SDL3Stopwatch.cpp  Win32GameWindow.cpp
Engine/Graphics/src/Terrain/: BlockManager.cpp  TerrainGenerator.cpp  TerrainMeshBuilder.cpp  TerrainRenderer.cpp  TerrainService.cpp  TerrainUploader.cpp
Engine/include/Core/Engine/: ClassHelper.hpp  GameApp.hpp  GameAppState.hpp  IScene.hpp  IServerScene.hpp  Logger.hpp  (+5 more)
Engine/include/Engine/: AssetBundle.hpp  AssetManager.hpp  Async.hpp  ClassHelper.hpp  DenseSparsePool.hpp  Engine.hpp  Formaters.hpp  GameApp.hpp  GameAppState.hpp  IScene.hpp  JobSystem.hpp  Logger.hpp  Math.hpp  ObjectType.hpp  Point2.hpp  Point3.hpp  PrintStackTrace.hpp  Random.hpp  ResourcePool.hpp  StreamingManager.hpp  TickScheduler.hpp  Timer.hpp  TypeTraits.hpp  entt.hpp  small_vector.hpp
Engine/src/: AssetBundle.cpp  AssetManager.cpp  GameApp.cpp  JobSystem.cpp  Logger.cpp  StreamingManager.cpp  TickScheduler.cpp  WindowedGameApp.cpp
Engine/src/ECS/: CameraRenderer.cpp  GameWorld.cpp  Renderers.cpp  SubsystemCamera.cpp  SubsystemDebugInfo.cpp  SubsystemPlayer.cpp  SubsystemPlayerInput.cpp  SubsystemUI.cpp
Engine/src/Graphics/: ChunkAllocator.cpp  DebugPass.cpp  Renderer.cpp  RendererInternals.hpp  RingStagingBuffer.cpp  TerrainPass.cpp  UIPass.cpp  UniformArena.cpp
Engine/src/Input/: InputSystem.cpp  InputSytem.cpp
Engine/src/Platform/: CLIRunner.cpp  PrintStackTrace.cpp  SDL3AssetLoader.cpp  SDL3GameWindow.cpp  SDL3Stopwatch.cpp  Win32AssetLoader.cpp  Win32GameWindow.cpp
Engine/src/Scenes/: DebugScene.cpp
Engine/src/Terrain/: BlockManager.cpp  TerrainGenerator.cpp  TerrainMeshBuilder.cpp  TerrainService.cpp  TerrainUploader.cpp
OneGame/: CMakeLists.txt  Client.hpp  DebugClient.cpp  DebugScene.cpp  DebugScene.hpp  DebugServer.cpp  Server.hpp  TestRenderer.cpp  TestRenderer.hpp  main.cpp  main2.cpp  main_headless.cpp
OneGameAndroid/: CMakeLists.txt
OneGameAndroid/app/: build.gradle
OneGameAndroid/app/jni/: CMakeLists.txt
OneGameLib/: CMakeLists.txt
OneGameLib/include/OneGame/: Client.hpp  DebugScene.hpp  Server.hpp
OneGameLib/src/: DebugClient.cpp  DebugScene.cpp  DebugScene0.cpp  DebugServer.cpp
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/src/: log.cpp  raw_input_stream.cpp
engine/graphics_vulkan/: CMakeLists.txt
engine/graphics_vulkan/src/: binding_group.cpp  buffer.cpp  buffer.hpp  command_buffer.cpp  fence.cpp  fence.hpp  pipeline.hpp  texture.hpp  vulkan.cpp  vulkan.hpp
engine/modules/core/: CMakeLists.txt
engine/modules/graphics/: CMakeLists.txt
engine/modules/graphics_vulkan/: CMakeLists.txt
engine/modules/platform_ext/: CMakeLists.txt
engine/modules/runtime/: CMakeLists.txt
engine/platform/: CMakeLists.txt
engine/platform/src/: io.cpp  platform.cpp
engine/platform_ext_sdl3/: CMakeLists.txt
engine/platform_ext_sdl3/src/: SDL3GameWindow.cpp  SDL3MetalExt.mm  sdl3_asset_loader.cpp  sdl3_game_window.cpp  sdl3_window.hpp
engine/runtime/src/: asset_manager.cpp  tick_scheduler.cpp
engine/runtime_ext/: CMakeLists.txt
engine/runtime_ext/src/: asset_pool.cpp  ring_staging_buffer.cpp  uniform_arena.cpp
game/: CMakeLists.txt
game/ctrl/: CMakeLists.txt
game/ctrl/src/: server.cpp
game/ctrl_ext/: CMakeLists.txt
game/ctrl_ext/src/: client.cpp
game/data/: CMakeLists.txt
game/data/src/: components.cpp
game/render/: CMakeLists.txt
game/sim/: CMakeLists.txt
game/sim/src/: registery.cpp  registry.cpp  subsystem_creature.cpp  subsystem_debug_text.cpp  subsystem_physics.cpp  subsystem_player.cpp
game/view/: CMakeLists.txt
game/view/src/: ui.cpp
game_android/app/jni/: CMakeLists.txt
game_desktop/: CMakeLists.txt  main.cpp
game_desktop/macos/: AppIcon.icns  generate_icon.sh
game_gui/: CMakeLists.txt  main.cpp
(+367 files in other folders)
